--- a/src/templates/files.html
+++ b/src/templates/files.html
@@ -6,7 +6,7 @@
     <title>File List</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/style.css"> <!-- Custom styles -->
+    <link rel="stylesheet" href="/static/style.css"> <!-- Custom styles -->
 </head>
 <body>
     <!-- Navbar with Dark Mode Switch -->
@@ -57,8 +57,8 @@
     </footer>
 
     <!-- JavaScript files -->
-    <script src="/fetchFiles.js" defer></script> <!-- Existing JavaScript for fetching file list -->
-    <script src="/dark-mode.js" defer></script> <!-- Add the dark-mode script -->
+    <script src="/static/fetchFiles.js" defer></script> <!-- Existing JavaScript for fetching file list -->
+    <script src="/static/dark-mode.js" defer></script> <!-- Add the dark-mode script -->
     
     <script>
         // Function to check if the user is logged in by checking the presence of the JWT token
