Added ability to delete files

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -124,7 +124,7 @@
                 name: name,
                 email: email,
                 password: password,
-                'confirm-password': confirmPassword
+                confirm_password: confirmPassword
             })
         });
 
