--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -150,6 +150,7 @@
                     deleteButton.addEventListener('click', function() {
                         // Remove the list item from the view
                         listGroup.removeChild(listItem);
+                        removeFile(fileData.file_id);
                     });
 
                     // Append file link, timestamp, and delete button to list item
@@ -190,6 +191,21 @@
                 return;
             }
             console.log("User is logged in: ", isLoggedIn);
+        }
+
+        function removeFile(fileId) {
+            fetch(`/files/${fileId}`, {
+                method: 'DELETE',
+                credentials: 'same-origin',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+            .then(response => response.json())
+            .then(responseData => {
+                console.log(responseData);
+            })
+            .catch(error => console.error('Error:', error));
         }
 
         // Display the file list when the page loads
