Fixed issue where guests could not see their files

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -55,8 +55,8 @@
         </div>
 
         <!-- Container for file list -->
-        <div id="link-container" class="mt-4 d-none">
-            <h2>Uploaded Files</h2>
+        <div id="link-container" class="mt-47">
+            <h2 class="d-none">Uploaded Files</h2>
             <div id="file-list">
                 <!-- Groups of files will be dynamically added here -->
             </div>
